--- a/vt/specs/complete/one.yaml
+++ b/vt/specs/complete/one.yaml
@@ -1651,7 +1651,7 @@ resources:
       anchorX: 0.5
       anchorY: 0.5
 
-  animations:
+  tweens:
     3lkj289:
       name: "Fade In"
       properties:
