--- a/src/schemas/presentationActions.yaml
+++ b/src/schemas/presentationActions.yaml
@@ -36,31 +36,28 @@ properties:
             type: object
             description: Animation configuration for background entrance
             properties:
-              animationId:
+              resourceId:
                 type: string
-                description: ID of the animation to use
-            required: [animationId]
+                description: ID of the tween resource to use
+            required: [resourceId]
             additionalProperties: false
           out:
             type: object
             description: Animation configuration for background exit
             properties:
-              animationId:
-                type: string
-                description: ID of the animation to use
               resourceId:
                 type: string
-                description: ID of the resource to animate out
-            required: [animationId, resourceId]
+                description: ID of the tween resource to use
+            required: [resourceId]
             additionalProperties: false
           update:
             type: object
             description: Animation configuration for background update
             properties:
-              animationId:
+              resourceId:
                 type: string
-                description: ID of the animation to use
-            required: [animationId]
+                description: ID of the tween resource to use
+            required: [resourceId]
             additionalProperties: false
         additionalProperties: false
     additionalProperties: false
@@ -140,31 +137,28 @@ properties:
                   type: object
                   description: Animation configuration for visual entrance
                   properties:
-                    animationId:
+                    resourceId:
                       type: string
-                      description: ID of the animation to use
-                  required: [animationId]
+                      description: ID of the tween resource to use
+                  required: [resourceId]
                   additionalProperties: false
                 out:
                   type: object
                   description: Animation configuration for visual exit
                   properties:
-                    animationId:
-                      type: string
-                      description: ID of the animation to use
                     resourceId:
                       type: string
-                      description: ID of the resource to animate out
-                  required: [animationId, resourceId]
+                      description: ID of the tween resource to use
+                  required: [resourceId]
                   additionalProperties: false
                 update:
                   type: object
                   description: Animation configuration for visual update
                   properties:
-                    animationId:
+                    resourceId:
                       type: string
-                      description: ID of the animation to use
-                  required: [animationId]
+                      description: ID of the tween resource to use
+                  required: [resourceId]
                   additionalProperties: false
               additionalProperties: false
           required: [id]
